<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos</string>
    <string name="menu_present">Presentes</string>
    <string name="menu_absents">Ausentes</string>

    <string name="guest_confirmation_text">Confirmação</string>
    <string name="guest_present_radioButton">Presente</string>
    <string name="guest_absent_radioButton">Ausente</string>
    <string name="guest_guest_text">Convidado</string>
    <string name="guest_name_hint">Digite o nome</string>
    <string name="guest_save_button">Salvar</string>
    <string name="dialog_remover_title">Remoção de convidado</string>
    <string name="dialog_remover_message">Deseja realmente remover o convidado da lista?</string>
    <string name="dialog_positive_button">Sim</string>
    <string name="dialog_negative_button">Não</string>
</resources>