<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.GuestFormActivity">

    <TextView
        android:id="@+id/formNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guest_guest_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/formNameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/guest_name_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formNameTextView" />

    <TextView
        android:id="@+id/formConfirmationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/guest_confirmation_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formNameEdit" />

    <RadioGroup
        android:id="@+id/formRadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formConfirmationTextView">

        <RadioButton
            android:id="@+id/formPresenceRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_present_radioButton" />

        <RadioButton
            android:id="@+id/formAbsentRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest_absent_radioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/formSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/guest_save_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formRadio" />


</androidx.constraintlayout.widget.ConstraintLayout>